--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -6,6 +6,10 @@
     background-attachment:fixed;
 }
 /*настройка всяческих полей*/
+label span:not(.x-form-item-label-inner){
+    color:#EF292B;          /*required*/
+    padding:5px;
+}
 label.x-form-item-label-default{
     /*vertical-align:middle;*/
     color:#1D4B82;
@@ -213,7 +217,8 @@ label.user_cls.x-toolbar-item{
 .exit_cls{
     left:calc(100% - 50px) !important;
 }
-.icons_cls span{
+.icons_cls span,
+.add_cls span{
     color:#1D4B82;
     font-family:Arial, sans-serif;
     font-size:12px;
@@ -283,7 +288,11 @@ div.x-column-header-inner{
     .doc_search .x-grid-with-row-lines td.x-grid-td:nth-child(1) .x-grid-cell-inner,
     .doc_search .x-grid-with-row-lines td.x-grid-td:nth-child(2) .x-grid-cell-inner,
     .doc_search .x-grid-with-row-lines td.x-grid-td:nth-child(5) .x-grid-cell-inner,
-    .doc_search .x-grid-with-row-lines td.x-grid-td:nth-child(9) .x-grid-cell-inner{
+    .doc_search .x-grid-with-row-lines td.x-grid-td:nth-child(9) .x-grid-cell-inner,
+    .doc_case .x-grid-with-row-lines td.x-grid-td:nth-child(1) .x-grid-cell-inner,
+    .doc_case .x-grid-with-row-lines td.x-grid-td:nth-child(2) .x-grid-cell-inner,
+    .doc_case .x-grid-with-row-lines td.x-grid-td:nth-child(5) .x-grid-cell-inner,
+    .doc_case .x-grid-with-row-lines td.x-grid-td:nth-child(10) .x-grid-cell-inner{
         text-align:center !important;
     }
 .x-panel-body .x-grid-item:nth-child(even){
@@ -305,6 +314,14 @@ div.x-column-header-inner{
 /*панель навигации*/
 div[id*=pagingtoolbar].x-toolbar{
     width:100%;             /*в общем случае. в карточках, где у таблиц есть кнопки, это не так*/
+}
+.doc_case div[id*=pagingtoolbar].x-toolbar{
+    width:calc(100% - 170px);
+}
+div[id*=pagingtoolbar] .x-toolbar-text{
+    color:#3B6392;
+    font-family:'Roboto Bold';
+    font-size:13px;
 }
 div[id*=pagingtoolbar].x-box-inner{
     width:215px !important;
@@ -332,3 +349,4 @@ div[id*=pagingtoolbar].x-box-inner{
 .x-item-disabled .x-tbar-page-last{
     opacity:0.5;
 }
+
