--- a/ea-vkks-web/src/main/earh/resources/css/icons_app.css
+++ b/ea-vkks-web/src/main/earh/resources/css/icons_app.css
@@ -105,3 +105,27 @@ a.remove_cls.x-btn.x-btn-focus.x-btn-default-toolbar-small{
     /*margin-left:-30px !important;*/
 }
 /**/
+/*поиск документов в деле*/
+.find_doc{
+    padding-right:23px;
+}
+div.search{
+    background-image:url('../images/project_images/find.png');
+    background-position:0 0 !important;
+    margin-top:2px;
+    margin-left:-23px;
+    width:20px;
+    height:20px;
+}
+div.search.x-form-trigger-over{
+    opacity:0.7;
+}
+a.add_cls.x-btn,
+a.add_cls.x-btn-over.x-btn-default-small,
+a.add_cls.x-btn.x-btn-pressed.x-btn-default-small,
+a.add_cls.x-btn.x-btn-focus.x-btn-default-small{
+    background-image:url('../images/project_images/add.png');
+    background-repeat:no-repeat;
+    margin-left:10px;
+    padding-left:23px;
+}
