--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -252,7 +252,8 @@ div.x-grid-with-row-lines{
     border:1px solid #809EDA;
 }
 div.x-grid-header-ct,
-div.x-column-header{
+div.x-column-header,
+div.x-column-header-over{
     background-color:#DCE5F3;
 }
 div.x-column-header,
