--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -11,10 +11,12 @@ label.x-form-item-label-default{
     color:#1D4B82;
     font-family:'Roboto Bold';
     font-size:15px;
-    padding-right:15px !important;
+   /* padding-right:15px !important;*/
+    /*margin-right:25px !important;*/
 }
 .x-form-text-field-body.x-form-item-body-default{
     min-height:25px;
+    padding-left:15px;
 }
 input.x-form-text.x-form-text-default,
 textarea.x-form-text.x-form-text-default{
@@ -23,68 +25,68 @@ textarea.x-form-text.x-form-text-default{
     border-radius:6px;
     min-height:25px;
 }
-    /*combobox*/
-    @media all and (-webkit-min-device-pixel-ratio:0) {
-        .x-form-dirty div[id*="combo"].x-form-trigger-default{
-            top:10px;
-            position:relative;
-        }
-    }
-    @media screen and (min-width:0\0) {
-        div[id*="combo"].x-form-trigger-default,
-        div[id*="treepicker"].x-form-trigger-default{
-            top:6px;
-            position:relative;
-        }
-        .x-form-dirty div[id*="combo"].x-form-trigger-default,
-        .x-form-dirty div[id*="treepicker"].x-form-trigger-default{
-            top:6px;
-            position:relative;
-        }
-    }
-    .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
-    .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
-    .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
-    .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
-        padding-right:24px;
-        box-sizing:padding-box !important;  /*для хрома*/
-    }
-    .x-border-box div[id*="combo"].x-form-trigger-default,
-    .x-border-box div[id*="treepicker"].x-form-trigger-default,
-    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
-    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
-    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
-    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
-    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
-    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
-        display:inline;     /*для хрома*/
-        box-sizing:padding-box !important; /*для хрома*/
-        padding:0 9px;      /*для хрома*/
-    }
-    
-    div[id*="combo"].x-form-trigger-default,
-    div[id*="treepicker"].x-form-trigger-default,
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
-        background-image:url('../images/project_images/triangle.png');
-        background-repeat:no-repeat;
-        background-position:center;
-        margin-left:-20px;
-        width:20px;
-        border-left:1px solid #809EDA;
-    }
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
-    div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
-    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
-        background-color:rgba(235,240,248,.5);
-    }
+/*combobox*/
+@media all and (-webkit-min-device-pixel-ratio:0) {
+	.x-form-dirty div[id*="combo"].x-form-trigger-default{
+		top:10px;
+		position:relative;
+	}
+}
+@media screen and (min-width:0\0) {
+	div[id*="combo"].x-form-trigger-default,
+	div[id*="treepicker"].x-form-trigger-default{
+		top:6px;
+		position:relative;
+	}
+	.x-form-dirty div[id*="combo"].x-form-trigger-default,
+	.x-form-dirty div[id*="treepicker"].x-form-trigger-default{
+		top:6px;
+		position:relative;
+	}
+}
+.x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
+.x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
+.x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
+.x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
+	padding-right:24px;
+	box-sizing:padding-box !important;  /*для хрома*/
+}
+.x-border-box div[id*="combo"].x-form-trigger-default,
+.x-border-box div[id*="treepicker"].x-form-trigger-default,
+.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+	display:inline;     /*для хрома*/
+	box-sizing:padding-box !important; /*для хрома*/
+	padding:0 9px;      /*для хрома*/
+}
+
+div[id*="combo"].x-form-trigger-default,
+div[id*="treepicker"].x-form-trigger-default,
+div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+	background-image:url('../images/project_images/triangle.png');
+	background-repeat:no-repeat;
+	background-position:center;
+	margin-left:-20px;
+	width:20px;
+	border-left:1px solid #809EDA;
+}
+div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+	background-color:rgba(235,240,248,.5);
+}
 /**/
 /*кнопки*/
 a.x-btn.buttons_style,
@@ -154,7 +156,7 @@ h1{
     position:relative !important;
 }*/
 .main_page .x-autocontainer-outerCt{
-    width:800px;    
+    width:800px;
 }
 .main_page a .x-btn-inner-default-small{
     color:#1D4B82;
@@ -176,15 +178,15 @@ h1{
     padding-bottom:60px;
     margin-top:5%;
 }
-    /*только для домашней*/
-    .main_page > .x-box-inner {
-        margin:auto;
-        width:60% !important;
-    }
-    .main_page a.x-btn{
-        width:250px;
-        margin:auto !important;
-    }
+/*только для домашней*/
+.main_page > .x-box-inner {
+	margin:auto;
+	width:60% !important;
+}
+.main_page a.x-btn{
+	width:250px;
+	margin:auto !important;
+}
 /**/
 /*кнопочное меню*/
 .x-toolbar-spacer{
@@ -196,7 +198,7 @@ h1{
 }
 .buttons_menu{
     padding:5px !important;
-    //height:50px;
+    /*height:50px;*/
 }
 label.user_cls.x-toolbar-item{
     color:#1D4B82;
@@ -255,14 +257,14 @@ div.x-column-header,
 div.x-column-header{
     border-bottom:1px solid #809EDA;
 }
-    /*выравнивание неверной высоты ячеек, образующейся из-за отсутствующих бордеров*/
-    div.x-panel-body td.x-grid-td{
-        margin-top:-1px;
-        margin-right:2px;
-    }
-    div.x-grid-header-ct{
-        margin-bottom:-1px;
-    }
+/*выравнивание неверной высоты ячеек, образующейся из-за отсутствующих бордеров*/
+div.x-panel-body td.x-grid-td{
+	margin-top:-1px;
+	margin-right:2px;
+}
+div.x-grid-header-ct{
+	margin-bottom:-1px;
+}
 div.x-column-header-inner{
     color:#1D4B82;
     font-family:'Scada Bold';
@@ -284,4 +286,35 @@ div.x-column-header-inner{
     color:#1D4B82;
     font-weight:bold;
     text-decoration:underline;
+}
+
+/*панель навигации*/
+div[id*=pagingtoolbar].x-toolbar{
+    width:100%;             /*в общем случае. в карточках, где у таблиц есть кнопки, это не так*/
+}
+div[id*=pagingtoolbar].x-box-inner{
+    width:215px !important;
+    margin: auto;
+}
+.x-box-inner span.x-tbar-page-prev{
+    background-image:url('../images/project_images/navigation.png');
+    background-position:0px 1px;
+}
+.x-box-inner span.x-tbar-page-first{
+    background-image:url('../images/project_images/navigation.png');
+    background-position:-12px 1px;
+}
+.x-box-inner span.x-tbar-page-next{
+    background-image:url('../images/project_images/navigation.png');
+    background-position:-24px 1px;
+}
+.x-box-inner span.x-tbar-page-last{
+    background-image:url('../images/project_images/navigation.png');
+    background-position:-36px 1px;
+}
+.x-item-disabled .x-tbar-page-prev,
+.x-item-disabled .x-tbar-page-first,
+.x-item-disabled .x-tbar-page-next,
+.x-item-disabled .x-tbar-page-last{
+    opacity:0.5;
 }
