потеряные при одном из мерджей изменения в карточке док-та, потеряная кнопка "последняя" в постраничной навигации, белая панель при логине

--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -140,6 +140,9 @@ h1{
     width:60% !important;
     left:0 !important;
 }
+.login_page .x-panel-body-default{
+    background-color:transparent;
+}
 .login_page .x-panel-header,
 .login_page .x-panel-header div{
     width:100% !important;
