--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -390,16 +390,16 @@ div[id*=pagingtoolbar].x-box-inner{
 .x-item-disabled .x-tbar-page-last{
     opacity:0.5;
 }
-/*кртачка документа*/
+/*карточка документа*/
     /*разметка*/
-    .card_doc .x-box-inner div.x-box-target > .x-panel.fields_doc{
-        /*width:50% !important;*/
+    /*.card_doc .x-box-inner div.x-box-target > .x-panel.fields_doc{
         width:calc(100% - 567px) !important;
-    }
-    .card_doc .x-box-inner div.x-box-target > .x-panel{
+    } */   
+    .card_doc .x-box-inner div.x-box-target .graf_view{
         position:relative !important;
         display:inline-block;
-        float:left;
+        float:right;
+        margin-right:5px !important;
     }
 .x-panel.graf_view{
     left:0 !important;
