--- a/ea-vkks-web/src/main/earh/resources/css/icons_app.css
+++ b/ea-vkks-web/src/main/earh/resources/css/icons_app.css
@@ -135,3 +135,19 @@ a.add_cls.x-btn.x-btn-focus.x-btn-default-small{
     margin-left:10px;
     padding-left:23px;
 }
+.close_cls img.x-tool-img{
+    background-image:url('../images/project_images/red_cross.png');
+    background-position:0 0;
+}
+.add_file_cls .x-form-item-body{
+    background-image:url('../images/project_images/add_file.png');
+    background-repeat:no-repeat;
+    /height:30px;
+    padding-left:30px;
+}
+.add_file_cls span.x-btn-inner-default-small{
+    color:#1D4B82;
+    font-family:Arial, sans-serif;
+    font-size:1.02em;
+    padding:5px 0;
+}
