--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -34,42 +34,11 @@ input.x-form-text.x-form-text-default{
     min-height:25px;
 }
 /*combobox*/
-@media all and (-webkit-min-device-pixel-ratio:0) {
-	.x-form-dirty div[id*="combo"].x-form-trigger-default{
-		top:10px;
-		position:relative;
-	}
-}
-@media screen and (min-width:0\0) {
-	div[id*="combo"].x-form-trigger-default,
-	div[id*="treepicker"].x-form-trigger-default{
-		top:6px;
-		position:relative;
-	}
-	.x-form-dirty div[id*="combo"].x-form-trigger-default,
-	.x-form-dirty div[id*="treepicker"].x-form-trigger-default{
-		top:6px;
-		position:relative;
-	}
-}
 .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
 .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
 .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
 .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
 	padding-right:24px;
-	box-sizing:padding-box !important;  /*для хрома*/
-}
-.x-border-box div[id*="combo"].x-form-trigger-default,
-.x-border-box div[id*="treepicker"].x-form-trigger-default,
-.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
-.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
-.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
-.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
-.x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
-.x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
-	display:inline;     /*для хрома*/
-	box-sizing:padding-box !important; /*для хрома*/
-	padding:0 9px;      /*для хрома*/
 }
 
 div[id*="combo"].x-form-trigger-default,
@@ -397,4 +366,85 @@ div[id*=pagingtoolbar].x-box-inner{
 }
 .section_panel .graf_view .x-panel-header .x-title-text{
     border:none;
+}
+
+
+/*временно здесь. Должно быт перенесено в crossbrousers.css*/
+/*Opera*/
+noindex:-o-prefocus, .exit_cls { 
+    left:96% !important; 
+  } 
+/*safari*/
+@media screen and ( -webkit-min-device-pixel-ratio : 0 )	 { 
+    .exit_cls { 
+        left:96% !important; 
+     }
+}
+/*opera (временное решение)*/
+noindex:-o-prefocus, .title_head { 
+  width: 90%;
+} 
+/*safari*/
+@media screen and ( -webkit-min-device-pixel-ratio : 0 ) { 
+  .title_head { 
+      width: 90%;
+  } 
+}
+/*combobox*/
+    /*safari*/
+    @media all and (-webkit-min-device-pixel-ratio:0) {
+            .x-form-dirty div[id*="combo"].x-form-trigger-default{
+                    top:10px;
+                    position:relative;
+            }
+    }
+    @media screen and (min-width:0\0) {
+            div[id*="combo"].x-form-trigger-default,
+            div[id*="treepicker"].x-form-trigger-default,
+            .x-form-dirty div[id*="combo"].x-form-trigger-default,
+            .x-form-dirty div[id*="treepicker"].x-form-trigger-default{
+                    top:6px;
+                    position:relative;
+            }
+    }
+    /**/
+    .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
+        box-sizing:padding-box !important;    
+    }
+    .x-border-box div[id*="combo"].x-form-trigger-default,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+            display:inline;
+            box-sizing:padding-box !important;
+            padding:0 9px;
+    }
+/*поиск документов дела в деле*/
+div.search {
+    display:block;
+    box-sizing:padding-box !important;  
+}
+/*ie*/
+@media screen and (min-width:0\0){
+    .x-border-box .find_doc div.search {
+        top:2px !important;
+        position:absolute !important;
+    }
+}
+/*chrome*/
+@media all and (-webkit-min-device-pixel-ratio:0) {
+    .x-border-box .find_doc div.search {
+        position:absolute !important;
+    }
+}
+.find_doc .x-form-text-wrap.x-form-text-wrap-default input[id*="textfield"]{
+    box-sizing:padding-box !important;    
+    padding-right:24px;
 }
