--- a/ea-vkks-web/src/main/earh/resources/css/crossbrousers.css
+++ b/ea-vkks-web/src/main/earh/resources/css/crossbrousers.css
@@ -7,7 +7,6 @@ and open the template in the editor.
     Created on : 15.12.2014, 16:28:57
     Author     : shapovalova
 */
-
 /*Opera*/
 noindex:-o-prefocus, .exit_cls { 
     left:96% !important; 
@@ -27,4 +26,62 @@ noindex:-o-prefocus, .title_head {
   .title_head { 
       width: 90%;
   } 
+}
+/*combobox*/
+    /*safari*/
+    @media all and (-webkit-min-device-pixel-ratio:0) {
+            .x-form-dirty div[id*="combo"].x-form-trigger-default{
+                    top:10px;
+                    position:relative;
+            }
+    }
+    @media screen and (min-width:0\0) {
+            div[id*="combo"].x-form-trigger-default,
+            div[id*="treepicker"].x-form-trigger-default,
+            .x-form-dirty div[id*="combo"].x-form-trigger-default,
+            .x-form-dirty div[id*="treepicker"].x-form-trigger-default{
+                    top:6px;
+                    position:relative;
+            }
+    }
+    /**/
+    .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
+        box-sizing:padding-box !important;    
+    }
+    .x-border-box div[id*="combo"].x-form-trigger-default,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+            display:inline;
+            box-sizing:padding-box !important;
+            padding:0 9px;
+    }
+/*поиск документов дела в деле*/
+div.search {
+    display:block;
+    box-sizing:padding-box !important;  
+}
+/*ie*/
+@media screen and (min-width:0\0){
+    .x-border-box .find_doc div.search {
+        top:2px !important;
+        position:absolute !important;
+    }
+}
+/*chrome*/
+@media all and (-webkit-min-device-pixel-ratio:0) {
+    .x-border-box .find_doc div.search {
+        position:absolute !important;
+    }
+}
+.find_doc .x-form-text-wrap.x-form-text-wrap-default input[id*="textfield"]{
+    box-sizing:padding-box !important;    
+    padding-right:24px;
 }
