--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -175,7 +175,10 @@ h1{
     left:0 !important;
     margin-left:calc(50% - 20px) !important;
 }
-
+/*поле в логине для safari*/
+.login_page .x-panel-body > div{
+    min-height:65px !important;
+}
 /*перенести в отдельный файл, если будет много*/
 /*Opera*/
 noindex:-o-prefocus, .login_page a{
@@ -187,7 +190,6 @@ noindex:-o-prefocus, .login_page a{
         margin-left:50% !important;
     }
 }
-
 /*кнопка в логине*/
 /*noindex:-o-prefocus, */.login_page .x-toolbar-footer{
     left:0 !important;
@@ -202,3 +204,4 @@ noindex:-o-prefocus, .login_page a{
 .login_page .x-toolbar-footer > div{
     width:100% !important;
 }
+
