--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -77,7 +77,7 @@ a.x-btn.x-btn-over.x-btn-pressed.buttons_style{
     -webkit-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
     -ms-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
     -o-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
-    border-bottom:2px solid;
+    border-bottom:2px solid #5781B4;
     
 }
 .title_head div{
@@ -158,7 +158,7 @@ h1{
     -webkit-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
     -ms-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
     -o-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
-    border-bottom:1px solid;
+    border-bottom:1px solid #5781B4;
 }
 .login_page .x-panel-body{
     margin:auto;
