--- a/ea-vkks-web/src/main/earh/resources/css/icons_app.css
+++ b/ea-vkks-web/src/main/earh/resources/css/icons_app.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 24.11.2014, 17:16:35
     Author     : shapovalova
 */
@@ -142,7 +142,7 @@ a.add_cls.x-btn.x-btn-focus.x-btn-default-small{
 .add_file_cls .x-form-item-body{
     background-image:url('../images/project_images/add_file.png');
     background-repeat:no-repeat;
-    /height:30px;
+    height:30px;
     padding-left:30px;
 }
 .add_file_cls span.x-btn-inner-default-small{
