--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -187,6 +187,7 @@ h1{
     /*height:50px;*/
 }
 label.user_cls.x-toolbar-item{
+    top:15px !important;
     color:#1D4B82;
     font-family:'Souvenir Bold';
     font-size:14px;
@@ -213,7 +214,8 @@ label.user_cls.x-toolbar-item{
 div.fields_panel{
     padding:15px;
     border:1px solid #CADAF4;
-    box-shadow:6px 10px 18px rgba(98,119,168,.75)
+    box-shadow:6px 10px 18px rgba(98,119,168,.75);
+    overflow-y:auto;
 }
 .section_panel .x-panel-header .x-title-text{
     color:#1D4B82;
@@ -302,6 +304,10 @@ div.x-column-header-inner{
     text-decoration:none;
     cursor:default;
 }
+/*горизонтальный скролл*/
+.x-grid-view{
+    overflow-x:hidden !important;
+}
 
 /*панель навигации*/
 div[id*=pagingtoolbar].x-toolbar{
@@ -314,6 +320,9 @@ div[id*=pagingtoolbar] .x-toolbar-text{
     color:#3B6392;
     font-family:'Roboto Bold';
     font-size:13px;
+}
+div[id*=pagingtoolbar] .x-form-text-field-body.x-form-item-body-default{
+    padding-left:0;
 }
 
 div[id*=pagingtoolbar].x-box-inner{
