--- a/ea-vkks-web/src/main/earh/resources/css/crossbrousers.css
+++ b/ea-vkks-web/src/main/earh/resources/css/crossbrousers.css
@@ -94,3 +94,9 @@ div.search {
     box-sizing:padding-box !important;    
     padding-right:24px;
 }
+/*выравнивание неверной ширины ячеек, образующейся из-за отсутствующих бордеров*/
+@media all and (-webkit-min-device-pixel-ratio:0) {
+    div.x-grid-item-container{
+        margin-left:-1px;
+    }
+}
