--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -254,7 +254,7 @@ div.x-column-header{
 /*выравнивание неверной высоты ячеек, образующейся из-за отсутствующих бордеров*/
 div.x-panel-body td.x-grid-td{
 	margin-top:-1px;
-	//margin-right:-2px;
+	/*margin-right:-2px;*/
 }
 div.x-grid-header-ct{
 	margin-bottom:-1px;
