--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -46,7 +46,10 @@ input.x-form-text.x-form-text-default{
 .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
 	padding-right:24px;
 }
-
+div[id*="combo"].x-form-text-wrap-default,
+div[id*="treepicker"].x-form-text-wrap-default{
+    padding-right:2px;
+}
 div[id*="combo"].x-form-trigger-default,
 div[id*="treepicker"].x-form-trigger-default,
 div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
@@ -58,7 +61,7 @@ div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
 	background-image:url('../images/project_images/triangle.png');
 	background-repeat:no-repeat;
 	background-position:center;
-	margin-left:-20px;
+	margin-left:-21px;
 	width:20px;
 	border-left:1px solid #809EDA;
 }
