--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -8,7 +8,7 @@
 /*body > .x-box-inner .x-container*/
 body > .x-box-inner > .x-box-target > .x-container{
     overflow-x:hidden;
-    overflow-y:auto;
+   /* overflow-y:auto; */
     /*height:calc(100% - 190px);*/
     height:75%;
 }
@@ -227,7 +227,7 @@ div.fields_panel{
     padding:15px;
     border:1px solid #CADAF4;
     box-shadow:6px 10px 18px rgba(98,119,168,.75);
-    overflow-y:auto;
+/*    overflow-y:auto;*/
 }
 .section_panel .x-panel-header .x-title-text{
     color:#1D4B82;
