--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -70,7 +70,7 @@ a.x-btn.x-btn-over.x-btn-pressed.buttons_style{
 }
 .title_head{
     width:calc(100% - 150px);
-)
+}
 @media all and (-webkit-min-device-pixel-ratio:0) {
     .title_head{
         width: 90%;
