--- a/ea-vkks-web/src/main/login/resources/css/login_fonts.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_fonts.css
@@ -28,17 +28,17 @@
 @font-face{
     font-family:'Roboto';
     src:url('../fonts/Roboto/eot/roboto-regular-webfont.eot');
-    src:/*url('../fonts/Roboto/eot/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    src:url('../fonts/Roboto/eot/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Roboto/woff2/roboto-regular-webfont.woff2') format('woff2'),
-        url('../fonts/Roboto/woff/roboto-regular-webfont.woff') format('woff'),*/
+        url('../fonts/Roboto/woff/roboto-regular-webfont.woff') format('woff'),
         url('../fonts/Roboto/ttf/Roboto-Regular.ttf') format('truetype'),
         url('../fonts/Roboto/svg/roboto-regular-webfont.svg') format('svg');
 }
 @font-face{
     font-family:'Roboto Bold';
     src:url('../fonts/Roboto/eot/roboto-bold-webfont.eot');
-    src:url('../fonts/Roboto/eot/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),
-        /*url('../fonts/Roboto/woff/roboto-bold-webfont.woff') format('woff'),*/
+    src:/*url('../fonts/Roboto/eot/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Roboto/woff/roboto-bold-webfont.woff') format('woff'),*/
         url('../fonts/Roboto/ttf/Roboto-Bold.ttf') format('truetype'),
         url('../fonts/Roboto/svg/roboto-bold-webfont.svg') format('svg');
 }
