%ная аширина логина, поля в поиске документов

--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -109,7 +109,8 @@ h1{
     }
 }
 .header_cls ~ .x-container{
-    width:800px !important;
+    /*width:800px !important;*/
+    width:65.574%;
     margin:auto !important;
     position:relative !important;
     left:0 !important;
