--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -10,7 +10,7 @@ body > .x-box-inner > .x-box-target > .x-container{
     overflow-x:hidden;
    /* overflow-y:auto; */
     /*height:calc(100% - 190px);*/
-    //height:100%;
+    /*height:100%;*/
 }
 body > .x-box-inner > .x-box-target > .x-container.main_content{
     height:80%;
@@ -35,13 +35,13 @@ label.x-form-item-label-default{
     /*margin-right:25px !important;*/
 }
 .x-form-text-field-body.x-form-item-body-default{
-   // min-height:25px;
+   /* min-height:25px; */
     padding-left:15px;
 }
 .x-form-text-field-body.x-form-item-body-default input[role="textbox"],
 .x-form-text-field-body.x-form-item-body-default input[type="combobox"],
 .x-form-text-field-body.x-form-item-body-default input[type="text"]{
-    //height:20px;
+    /*height:20px;*/
 }
 .marl-15 .x-form-text-field-body.x-form-item-body-default{
     padding-left:3px;         /*горизонтальные даты документа в поиске документов*/
@@ -54,7 +54,7 @@ textarea.x-form-text.x-form-text-default{
     padding:3px;
 }
 input.x-form-text.x-form-text-default{
-    //min-height:25px;
+    /*min-height:25px;*/
 }
 /*combobox*/
 .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
